--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
           <h4>Selamat berbelanja</h4>
         </div>
           
-        <div class="home-c2">
-            <img src="../img/logo1.png">
-          </div>
+        <div class="home-c2"></div>
       </div>
       
     </section>
