--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       </div>
       
       <div class="navbar-icon">
-        <i data-feather="shopping-cart"></i>
+        <a href="#"><i data-feather="shopping-cart"></i></a>
+        <a href="#"><i data-feather="user"></i></a>
       </div>
       
     </nav>
