--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       </div>
       
       <div class="navbar-icon">
-        <a href="#"><i data-feather="shopping-cart"></i></a>
-        <a href="#"><i data-feather="user"></i></a>
+        <a href="#" class="icon-f"><i data-feather="shopping-cart"></i></a>
+        <a href="#" class="icon-log">login</a>
       </div>
       
     </nav>
